Selenide added