@@ -18,9 +18,7 @@ tasks.withType(JavaCompile){
 
 test {
     useJUnitPlatform()
-    //jvmArgs '--enable-preview'
-    //maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
-    /*useTestNG() {
+        /*useTestNG() {
             includeGroups 'smoke', 'sanity'
            excludeGroups 'regression'
         }*/
@@ -28,15 +26,16 @@ test {
 
 
 dependencies {
-    /*testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'*/
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
     testImplementation 'junit:junit:4.12'
     implementation 'junit:junit:4.12'
     implementation("io.github.bonigarcia:webdrivermanager:4.0.0")
     implementation 'com.codeborne:selenide:5.12.2'
     testImplementation 'io.cucumber:cucumber-java:6.1.0'
     testImplementation 'io.cucumber:cucumber-junit:6.1.0'
+    testImplementation 'com.codeborne:selenide:5.13.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 }
 
